Fix align center issue with article right form

--- a/styles.css
+++ b/styles.css
@@ -80,9 +80,10 @@ main {
 	background-color: #F7F7F7;
 	border-left: solid 2px #6E6E6E;
 	border-right: solid 1px #6E6E6E;
+	border-bottom: solid 2px #6E6E6E;
 	display: flex;
 	flex-direction: column;
-	height: 750px;
+	height: 700px;
 	width: 50%;
 }
 
@@ -91,9 +92,10 @@ main {
 	background-color: #D0D2D3;
 	border-left: solid 1px #6E6E6E;
 	border-right: solid 2px #6E6E6E;
+	border-bottom: solid 2px #6E6E6E;
 	display: flex;
 	flex-direction: column;
-	height: 750px;
+	height: 700px;
 	width: 50%;
 }
 
@@ -102,7 +104,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 150px;
+	height: 130px;
 }
 
 #set-range header {
@@ -133,7 +135,10 @@ main {
 }
 
 #set-range input {
-	width: 130%;
+	width: 115%;
+}
+
+#minRangeP {	
 }
 
 /* Current Range section */
@@ -163,6 +168,7 @@ main {
 #current-range section {
 	display: flex;
 	justify-content: space-between;
+	margin-top: 12px;
 }
 
 #current-range button {
@@ -170,17 +176,16 @@ main {
 	height: 35px;
 	width: 32%;
 	color: white;
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: 700;
 	border-radius: 20px;
-	margin: 10px;
-	margin-top: 30px;
+	margin: 5px;
 }
 
 .updateRange {
 	background-color: gray;
-	height: 35px;
-	width: 110px;
+	height: 32px;
+	width: 20%;
 	color: white;
 	font-size: 16px;
 	font-weight: 700;
@@ -284,31 +289,33 @@ article {
 	height: 40px;
 	justify-content: space-between;
 	margin: 0;
-	/*width: 90%;*/
+	width: 90%;
 }
 
 .minute-count {
 	color: gray;
 	display: flex;
 	flex-direction: row;
+	margin-left: 10%;
 }
 
 .guess-count {
 	color: gray;
 	display: flex;
 	flex-direction: row;
-	margin-right: 10px;
+	justify-content: space-between;
+	margin-left: 20%;
 }
 
 .x-icon {
 	border-radius: 100%;
 	height: 22px;
+	margin-left: 35%;
 }
 
 /* Latest-score card*/
 
 #latest-score * {
-	margin: 0;
 	padding: 0;
 }
 
@@ -316,21 +323,21 @@ article {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 350px;
+	height: 200px;
 }
 
 .score-header {
 	display: flex;
 	justify-content: flex-start;
 	width: 95%;
-	height: 50px;
+	height: 25px;
 }
 
 .main-score {
 	display: flex;
 	flex-direction: row;
 	width: 95%;
-	height: 150px
+	height: 140px
 }
 
 .main-score article {
@@ -338,7 +345,7 @@ article {
 	width: 50%;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	/*justify-content: center;*/
 }
 
 .main-score-left {
@@ -352,6 +359,9 @@ article {
 .minUser,
 .maxUser {
 	color: #404041;
+}
+
+#player-name-one {
 }
 
 button:hover,
